Fixed jumping header

--- a/components/common/Layout/Header/Typewriter/typewriter.module.scss
+++ b/components/common/Layout/Header/Typewriter/typewriter.module.scss
@@ -15,4 +15,6 @@
 
 .cursor {
   @include anims.cursor;
+
+  min-height: 1em;
 }
