--- a/components/common/Spinner/spinner.module.scss
+++ b/components/common/Spinner/spinner.module.scss
@@ -2,6 +2,8 @@
 @use "styles/variables.scss" as vars;
 
 .spinner {
+  display: inline-block;
+
   &.small {
     @include mixins.spinner(24px);
   }
